# llmlegal

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
llmleg/: pyproject.toml
llmleg-app/: README.md  package-lock.json  package.json
llmleg-app/public/: index.html
llmleg-app/src/: App.css  App.js  App.tsx  meta.json
llmleg/llmleg/: api.py  extract.py
llmleg/tests/: test_llmleg.py
llmleg/tests/llmleg/: test_api.py  test_extract.py
